# Syrus

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: globals.rs  hello_message.rs  lib.rs
src/core/: mod.rs
src/core/messages/: device_id_utils.rs  header.rs  hello.rs  messages.rs  mod.rs
src/errors/: errors.rs  invalid_message_errors.rs  mod.rs
src/messages/: HOW_TO_READ.md  device_id_utils.rs  header.rs  hello.rs  message_traits.rs  messages.rs  mod.rs
src/resources/: BEP.proto
src/tests/: mod.rs  test_device_ids.rs  test_hello_message.rs  test_messages.rs  test_protocol_buffer.rs
