[package]
name = "syrus"
version = "0.1.0"
authors = ["Wesrer <wesrer@protonmail.com>"]
edition = "2018"
build="build.rs"

[dependencies]
tokio = { version = "^0.2", features = ["full"] }
rustls= "^0.16.0"
bytes="^0.5"
prost="^0.6"
prost-types="^0.6"

[build-dependencies]
prost-build= {version = ""}
